[project]
name = "whatsapp-cake-order-mcp"
version = "0.1.0"
description = "A FastAPI application that handles WhatsApp-based cake orders and payment processing using Cashfree Payments using MCP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.114.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "langchain-anthropic>=0.3.12",
    "langchain-google-genai>=2.1.3",
    "langchain-mcp>=0.2.1",
    "langchain-mcp-adapters>=0.0.9",
    "langchain-openai>=0.3.14",
    "langgraph>=0.3.34",
    "langgraph-prebuilt>=0.1.8",
    "termcolor>=3.0.1",
]
